syntax = "proto3";

option java_package = "ch.rasc.httpcopy";

message FilesInfo {
  repeated FileInfo file = 1;
}

message FileInfo {
  string name = 1;
  string hash = 2;
  uint64 size = 3;
    
  enum Status {
    FILE_EXISTS = 0;
    FILENAME_EXISTS = 1;
    FILE_DOES_NOT_EXISTS = 2;
    FILETYPE_NOT_SUPPORTED = 3;
  }  
  Status status = 4;
}