syntax = "proto3";

option java_package = "ch.rasc.httpcopy";

message ChunkInfo {
  
  //  An unique client identifier
  string clientId = 1;
  
  // The file name 
  string filename = 2;
    
  // The chunk size
  uint64 size = 3;
  
  // The total file size
  uint64 totalSize = 4; 
  
  repeated uint32 existingChunks = 5;

}
